2023-12-17_elm_sa_kubernetes/lab_snapshots/lab10.cyber-crypt.com/training/mamdouh/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
