2023-12-17_elm_sa_kubernetes/lab_snapshots/lab10.cyber-crypt.com/training/mamdouh/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-training.jeddah10.sikademo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
